<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignRight="@+id/resultEdit"
        android:layout_alignEnd="@+id/resultEdit"
        android:layout_below="@+id/resultEdit">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_07"
                android:id="@+id/btn07"
                android:layout_weight="1"
                android:onClick="btn07Click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_08"
                android:id="@+id/btn08"
                android:layout_weight="1"
                android:onClick="btn08Click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_09"
                android:id="@+id/btn09"
                android:layout_weight="1"
                android:onClick="btn09Click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_plus"
                android:id="@+id/btnPlus"
                android:layout_weight="1"
                android:onClick="btnAddClick" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_04"
                android:id="@+id/btn04"
                android:layout_weight="1"
                android:onClick="btn04Click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_05"
                android:id="@+id/btn05"
                android:layout_weight="1"
                android:onClick="btn05Click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_06"
                android:id="@+id/btn06"
                android:layout_weight="1"
                android:onClick="btn06Click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_minus"
                android:id="@+id/btnMinus"
                android:layout_weight="1"
                android:onClick="btnMinusClick" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_01"
                android:id="@+id/btn01"
                android:layout_weight="1"
                android:onClick="btn01Click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_02"
                android:id="@+id/btn02"
                android:layout_weight="1"
                android:onClick="btn02Click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_03"
                android:id="@+id/btn03"
                android:layout_weight="1"
                android:onClick="btn03Click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_divide"
                android:id="@+id/btnDivide"
                android:layout_weight="1"
                android:onClick="btnDivideClick" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_clear"
                android:id="@+id/btnClear"
                android:layout_weight="1"
                android:onClick="btnClearClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_00"
                android:id="@+id/btn00"
                android:layout_weight="1"
                android:onClick="btn00Click" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_dot"
                android:id="@+id/buttonDot"
                android:layout_weight="1"
                android:onClick="btnDotClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/button_multiply"
                android:id="@+id/btnMultiply"
                android:layout_weight="1"
                android:onClick="btnMultiplyClick" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_weight="0.15"
            android:weightSum="0">

            <Button
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/button_result"
                android:id="@+id/btnResult"
                android:layout_weight="1"
                android:onClick="btnResultClick" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:id="@+id/resultEdit"
        android:inputType="none"
        android:paddingBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
